# crop_video_web_app

./: .gitignore  app.py  media_processor.py  pyproject.toml  requirements.txt
